# Jobins-CV-recommendation-tasks

./: .env.example  README.md  TECHNICAL_REPORT.rmd  main.py  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
notebooks/: README.md
output/: eval_report.json  evaluation_report.json  performance_report.json  recommendation.json  sample_cv_extracted.json
output/batch/: 10265057.json  10553553.json  10839851.json  35325329.json  36434348.json  36856210.json  37242217.json  37764298.json  38753827.json  39413067.json  39718499.json  40018190.json  41344156.json  46260230.json  48037995.json  51363762.json  51639418.json  52246737.json  52618188.json  57002858.json  64017585.json  66832845.json  processing_summary.json  sample_resume.json
scripts/: benchmarks.py  create_index.py  fix_schema.py  init_database.py  parse_cv.py  recommend_jobs.py  run_evaluation.py  test_performance.py  test_search_performance.py
src/: __init__.py  batch_processor.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/parsers/: __init__.py  cv_parser.py  models.py
src/recommendation/: __init__.py  database.py  matcher.py  models.py
src/utils/: __init__.py  config.py  logger.py  performance.py
